--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Skipper Bitcoin
-email: skipperventures@proton.me
+email: hello@skipperbitcoin.com
 description: >- # this means to ignore newlines until "baseurl:"
   The absolute best bitcoin education no money can buy. From 0 knowledge to Bitcoiner in no time.
 baseurl: /skipperbitcoin # the subpath of your site, e.g. /blog
